--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blink App</title>
-    <!-- CRITICAL: DO NOT REMOVE/MODIFY THIS COMMENT OR THE SCRIPT BELOW -->
-    <script src="https://blink.new/auto-engineer.js?projectId=big-bazar-sheet-wwohjrwx" type="module"></script>
+    <title>BigBazar App</title>
+    
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
-
+    <script type="module" src="/src/main.jsx"></script>
   </body>
-</html> 
+</html>
