feat: enhance admin panel with video preview and styling updates
- Add video preview modal to Admin panel for instant playback
- Update Footer with branded 'BIG BAZAR' logo and accent colors
- Improve Instagram video embedding and thumbnail generation
- Remove serial numbers from user-facing product cards

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/jpeg" href="/b.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Big Bazar</title>
+  <meta name="referrer" content="no-referrer" />
+  <title>Big Bazar | Bariarhat </title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Outfit:wght@400;700;900&display=swap"
+    rel="stylesheet">
+  <meta name="description"
+    content="Shop the latest collection at Big Bazar through high-performance native video reels. 100% Authentic products with fast nationwide delivery.">
 
 </head>
 
